--- a/VeraMeat Play/Storyboard.storyboard
+++ b/VeraMeat Play/Storyboard.storyboard
@@ -15,7 +15,41 @@
                     <view key="view" contentMode="scaleToFill" id="C3p-Wv-ASF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_BEAST.png" translatesAutoresizingMaskIntoConstraints="NO" id="n2G-3Y-XOo">
+                                <rect key="frame" x="0.0" y="1" width="322" height="138"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_KITTY.png" translatesAutoresizingMaskIntoConstraints="NO" id="m55-5Y-9G5" customClass="CatPlay">
+                                <rect key="frame" x="2" y="139" width="321" height="89"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_PUPPY.png" translatesAutoresizingMaskIntoConstraints="NO" id="IIg-0A-ChG">
+                                <rect key="frame" x="0.0" y="227" width="326" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_MAN.png" translatesAutoresizingMaskIntoConstraints="NO" id="Foj-7i-m0a">
+                                <rect key="frame" x="0.0" y="335" width="322" height="90"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_LADY.png" translatesAutoresizingMaskIntoConstraints="NO" id="kt1-5T-dmT">
+                                <rect key="frame" x="-1" y="426" width="322" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_PACKMAGIC.png" translatesAutoresizingMaskIntoConstraints="NO" id="BAq-UB-wIN">
+                                <rect key="frame" x="2" y="506" width="113" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_HANDS.png" translatesAutoresizingMaskIntoConstraints="NO" id="IJU-2q-t7a">
+                                <rect key="frame" x="115" y="506" width="103" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="VM_FOLLOW.png" translatesAutoresizingMaskIntoConstraints="NO" id="NcY-EY-Ixk">
+                                <rect key="frame" x="216" y="506" width="106" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GXY-Ug-ZHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -69,6 +103,16 @@
             <point key="canvasLocation" x="-352" y="167"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="VM_BEAST.png" width="512" height="218"/>
+        <image name="VM_FOLLOW.png" width="168" height="131"/>
+        <image name="VM_HANDS.png" width="162" height="131"/>
+        <image name="VM_KITTY.png" width="512" height="120"/>
+        <image name="VM_LADY.png" width="511" height="143"/>
+        <image name="VM_MAN.png" width="511" height="143"/>
+        <image name="VM_PACKMAGIC.png" width="162" height="131"/>
+        <image name="VM_PUPPY.png" width="511" height="143"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
